--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://darshitposhiya.github.io/shoping_site",
   "name": "shoping_site",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
